# comm_node

./: CMakeLists.txt  README.md  build
config/: CommNodeConfig.ini
docs/: CommNode_HLD_Requirements.doc  CommNode_High_Level_Design.doc  CommNode_Status.xlsx
scripts/: runCN.sh
src/: CMakeLists.txt  CommNode.cpp  CommNodeLog.cpp  main.cpp  mkaddr.cpp
src/include/: .mkaddr.cpp.swp  CommNode.h  CommNodeLog.h  NeighborInfo.h
src/test/: udp_broadcast_client.cpp  udp_broadcast_server.cpp
