cmake_minimum_required(VERSION 3.4.0)
set(Boost_DEBUG 1)
set(BOOST_ROOT $ENV{BOOST_HOME}/bin)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Threads)
find_package(Boost 1.60.0 COMPONENTS thread filesystem system REQUIRED)

if (Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS} ./include)
	file(GLOB SRC "*.cpp")
	add_executable(commNode ${SRC})
	target_link_libraries(commNode ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
	target_compile_features(commNode PRIVATE cxx_range_for)
endif()
